[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI_styles/Button_red/Hover_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/UI_styles/Button_red/Normal.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/UI_styles/Button_red/Pressed.tres" type="StyleBox" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Main3D" type="Control" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug_left" type="Control" parent="Main3D"]
anchor_bottom = 1.0
margin_right = 192.0
margin_bottom = -80.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="_ColorRect" type="ColorRect" parent="Main3D/Debug_left"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.443137, 0.588235, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_x" type="Label" parent="Main3D/Debug_left"]
margin_right = 75.0
margin_bottom = 14.0
text = "Camera x: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera_y" type="Label" parent="Main3D/Debug_left"]
margin_top = 16.0
margin_right = 75.0
margin_bottom = 30.0
text = "Camera y: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_zoom" type="Label" parent="Main3D/Debug_left"]
margin_top = 32.0
margin_right = 103.0
margin_bottom = 46.0
text = "Current zoom: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse_x" type="Label" parent="Main3D/Debug_left"]
margin_top = 48.0
margin_right = 75.0
margin_bottom = 62.0
text = "Mouse x: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mouse_y" type="Label" parent="Main3D/Debug_left"]
margin_top = 64.0
margin_right = 75.0
margin_bottom = 78.0
text = "Mouse y: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="Main3D/Debug_left"]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 94.0
text = "FPS: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_right" type="Control" parent="Main3D"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_bottom = -80.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="_ColorRect" type="ColorRect" parent="Main3D/Text_right"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.529412, 0.258824, 0.360784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Main3D/Text_right"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Left click and drag - rotate.
Mouse wheel - zoom in/out.
Escape - quit."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="."]
material = SubResource( 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -88.0
mouse_filter = 1
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Controls"]
anchor_top = 0.091
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.00800037
mouse_filter = 2
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_turret" type="Button" parent="Controls"]
margin_left = 16.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 44.0
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Turret view"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_engine" type="Button" parent="Controls"]
margin_left = 16.0
margin_top = 56.0
margin_right = 72.0
margin_bottom = 76.0
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Engine"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_debug" type="Button" parent="Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 24.0
margin_right = -16.0
margin_bottom = 44.0
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_text_panel" type="Button" parent="Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = 76.0
focus_mode = 0
toggle_mode = true
keep_pressed_outside = true
text = "Text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_quit" type="Button" parent="Controls"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_top = 56.0
margin_right = -88.0
margin_bottom = 76.0
focus_mode = 0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
keep_pressed_outside = true
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Main3D" to="." method="_on_Viewport_main_mouse_entered"]
[connection signal="mouse_exited" from="Main3D" to="." method="_on_Viewport_main_mouse_exited"]
[connection signal="resized" from="Main3D" to="." method="_on_Viewport_main_resized"]
[connection signal="toggled" from="Controls/Button_turret" to="." method="_on_Button_turret_toggled"]
[connection signal="toggled" from="Controls/Button_engine" to="." method="_on_Button_engine_toggled"]
[connection signal="toggled" from="Controls/Button_debug" to="." method="_on_Button_debug_toggled"]
[connection signal="toggled" from="Controls/Button_text_panel" to="." method="_on_Button_text_panel_toggled"]
[connection signal="pressed" from="Controls/Button_quit" to="." method="_on_Button_quit_pressed"]
